tests/elab/errors/fun_lit/unsolved_pat_type.snapshot
exit status: 1

stdout = """
def error: ?0 -> ?0 = fun(x: ?0) => x;
types of expressions:
12..23 = ?0 -> ?0
22..23 = ?0
types of patterns:
16..17 = ?0
metavars:
?0 = <unsolved>
"""

stderr = """
error: unable to infer pattern type
  ┌─ tests/elab/errors/fun_lit/unsolved_pat_type.pion:1:17
  │
1 │ def error = fun(x) => x;
  │                 ^

aborting due to 1 previous error
"""
